k8s/app/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geepht-deployment
  namespace: geepht
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geepht
  template:
    metadata:
      labels:
        app: geepht
    spec:
      containers:
        - name: geepht
          image: codeywilliams/geepht:$GITHUB_SHA
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
