k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geepht-service
  namespace: geepht
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  selector:
    app: geepht
